@@ -1,3 +1,10 @@
+2007-07-09  Chris Rivera  <crivera@novell.com>
+
+	* Makefile.am:
+	* src/hal-cups-autoconfig.in:
+
+	Rename printers to printerconfig to fix abuild error.
+
 2007-06-08  Chris Rivera  <crivera@novell.com>
 
 	* configure.in:
